--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Reduxstagram</title>
     <link rel="shortcut icon" type="image/png" href="http://wes.io/ehRe/my-favourite-icon.png"/>
-
+    <script src="https://cdn.ravenjs.com/3.20.1/raven.min.js"
+    crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
